fix some jdk17 test problem (#3242)